change to smallcase all image file names

--- a/public/up.html
+++ b/public/up.html
@@ -149,9 +149,9 @@
                         {image:'images/cafes.jpg', name:'Cafes'}, 
                         {image:'images/drinks.jpg', name:'Drinks & Nightlife'}, 
                         {image:'images/takeaway.jpg', name:'Takeaway'}, 
-                        {image:'images/Fishandchips.jpg', name:'Fish & Chips'},
+                        {image:'images/fishandchips.jpg', name:'Fish & Chips'},
                         {image:'images/indian1.jpg', name:'Indian Cuisine'},
-                        {image:'images/Luxury.jpg', name:'Luxury Dining'}
+                        {image:'images/luxury.jpg', name:'Luxury Dining'}
 
                         ]
 
@@ -206,11 +206,11 @@
                         var arr1= [
 
                         {image:'images/wind.jpg', name:'Upminster Windmill'}, 
-                        {image:'images/Thames.jpg', name:'Thames Chase'}, 
+                        {image:'images/thames.jpg', name:'Thames Chase'}, 
                         {image:'images/garden.jpg', name:'Ingrebourne Valley Garden'}, 
-                        {image:'images/Barn.jpg', name:'Tithe Barn Museum of Nostalgia'}, 
+                        {image:'images/barn.jpg', name:'Tithe Barn Museum of Nostalgia'}, 
                         {image:'images/hall.jpg', name:'Damyns Hall Aerodrome'}, 
-                        {image:'images/Farmer.jpg', name:'Upminster Farmers Market'},
+                        {image:'images/farmer.jpg', name:'Upminster Farmers Market'},
                         {image:'images/pizza.jpg', name:'Pizza Express'},
                         {image:'images/church.jpg', name:'St Andrews Church Hornchurch'}
 
@@ -264,7 +264,7 @@
                     <script>                       
                         var arr2= [
 
-                        {image:'images/Paintball.jpg', name:'Delta Force Paintball'}, 
+                        {image:'images/paintball.jpg', name:'Delta Force Paintball'}, 
                         {image:'images/stubbers.jpg', name:'Stubbers Activity Centre'}, 
                         {image:'images/pic1.jpg', name:'Crumpled Horn'}, 
                         {image:'images/timbuk.jpg', name:'Timbuk 2'}, 
